--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title }}</title>
+    <title>
+      {% unless page.title == 'index' %}
+        {{ page.title }} | 
+      {% endunless %}
+      Ethiopicist // Developer
+    </title>
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
