--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title }} | Ethiopicist // Developer</title>
+    <title>Ethiopicist // Developer</title>
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
   <section class="section">
     <div class="container">
       <h1 class="title">
-        {{ page.title }}
+          Ethiopicist // Developer
       </h1>
       <p class="subtitle">
         {{ content }}
