--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,1 +1,2 @@
-@import "bulma";
+@import "../../_sass/bulma";
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
