--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -1,12 +1,60 @@
 @charset "utf-8"
 /*! bulma.io v0.7.1 | MIT License | github.com/jgthms/bulma */
+
+@import "https://use.typekit.net/fqf0utz.css"
 @import "utilities/initial-variables"
 
-$primary: #fd774e
+$primary: #F3CA40
+$info: #577590
+$dark: rgb(15, 13, 16)
 
-@import "sass/utilities/_all"
-@import "sass/base/_all"
-@import "sass/elements/_all"
-@import "sass/components/_all"
-@import "sass/grid/_all"
-@import "sass/layout/_all"
+$family-title: $family-sans-serif
+$family-sans-serif: fira-sans, $family-sans-serif
+$link: $info
+
+@import "utilities/_all"
+@import "base/_all"
+@import "elements/_all"
+@import "components/_all"
+@import "grid/_all"
+@import "layout/_all"
+
+section.section
+  &.lead
+    background: $white-ter
+
+    p
+      font-size: 1.5rem
+      font-weight: 300
+      text-align: center
+      
+      a
+        text-decoration: underline
+
+.hero.is-primary
+  text-align: center
+
+  .navbar
+    color: $dark
+
+    .navbar-item img
+      max-height: 50px
+
+  .title
+    font-size: 3.5rem
+    color: $dark
+    font-family: $family-title
+
+    img
+      height: 3rem
+      position: relative
+      top: .2rem
+  
+  .subtitle
+    font-size: 2rem
+    color: $dark
+
+.footer
+  background: $info
+  .content p strong
+    color: $white-ter
