--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,2 +1,2 @@
-@import "../../_sass/bulma";
+@import "bulma";
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
