Also forgot to set this

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -50,7 +50,7 @@
         <div class="columns">
           <div class="column">
             <h1 class="title">Apps</h1>
-            {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com" content="A pure Javascript/Jquery calendar app." %}
+            {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A pure Javascript/Jquery calendar app." %}
           </div>
           <div class="column is-hidden-touch"></div>
           <div class="column">
