--- a/_layouts/subscribe.html
+++ b/_layouts/subscribe.html
@@ -11,6 +11,18 @@
   </head>
   <body>
     <section class="hero is-primary is-medium">
+      <div class="hero-head">
+        <nav class="navbar">
+          <div class="container">
+            <div class="navbar-brand">
+              <a class="navbar-item" href="/">
+                <span class="icon is-small is-left"><i class="fa fa-chevron-left"></i></span>
+                <span>back</span>
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
@@ -22,7 +34,7 @@
 
     <section class="section">
       <div class="container">
-        <p class="content has-text-centered">{{ content }}</p>
+        <div class="content has-text-centered">{{ content }}</div>
         <form>
           <div class="columns">
             <div class="column"></div>
