Adjusting padding and responsiveness

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,7 +18,7 @@
               </a>
             </div>
             <div class="navbar-menu">
-              <div class="navbar-end">
+              <div class="navbar-end is-flex-touch">
                 <a class="navbar-item is-hidden-touch" href="https://github.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-github"></i></span></a>
                 <a class="navbar-item is-hidden-touch" href="https://www.facebook.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
                 <a class="navbar-item is-hidden-touch" href="https://twitter.com/ethiopicist" target="_blank"><span class="icon"><i class="fa fa-twitter"></i></span></a>
@@ -39,14 +39,6 @@
       </div>
     </section>
 
-    <section class="section lead">
-      <div class="container">
-        <p>
-          Become a part of the discussion and <a href="/subscribe/">subscribe</a> to our mailing list.
-        </p>
-      </div>
-    </section>
-
     <section class="section">
       <div class="container">
         <div class="columns">
@@ -61,6 +53,14 @@
         </div>
       </div>
     </section>
+
+    <section class="section lead">
+        <div class="container">
+          <p>
+            Become a part of the discussion and <a href="/subscribe/">subscribe</a> to our mailing list.
+          </p>
+        </div>
+      </section>
 
     {% include footer.html %}
   </body>
