--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -37,8 +37,11 @@ section.section
   .navbar
     color: $dark
 
-    .navbar-item img
-      max-height: 50px
+    .navbar-brand .navbar-item
+      padding: 0
+      
+      img
+        max-height: 50px
 
   .title
     font-size: 3.5rem
