I really ought to have tested this locally first

--- a/_includes/appcard.html
+++ b/_includes/appcard.html
@@ -1,14 +1,1 @@
-<div class="card">
-  <div class="card-content">
-    <p class="subtitle">{{ include.title }}</p>
-    <p>{{ include.content }}</p>
-  </div>
-  <footer class="card-footer">
-    <p class="card-footer-item">
-      <span><a href="{{ include.link }}">View App</a></span>
-    </p>
-    <p class="card-footer-item">
-      <span><a href="{{ include.repo }}">Fork on Github</a></span>
-    </p>
-  </footer>
-</div>
+{% include card.html title=include.title tag="App" link1="View App" href1=include.link link2="Fork on GitHub" href2=include.repo content=include.content %}
