--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -41,15 +41,10 @@
 
     <section class="section">
       <div class="container">
-        <div class="columns">
-          <div class="column">
-            <h1 class="title">Apps</h1>
-            {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
-          </div>
-          <div class="column is-hidden-touch"></div>
-          <div class="column">
-              <h1 class="title">Code</h1>
-          </div>
+        <div class="tile is-ancestor">
+          
+          {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
+          
         </div>
       </div>
     </section>
