--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -44,7 +44,8 @@
         <div class="tile is-ancestor">
           
           {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
-          
+          {% include apicard.html title="Titles Database" link="https://titles.ethiopicist.com" docs="https://github.com/ethiopicist/Titles#readme" content="A database of titles and incipits for common books and prayers." %}
+
         </div>
       </div>
     </section>
