--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -57,6 +57,9 @@ section.section
     font-size: 2rem
     color: $dark
 
+.tag.is-primary
+  color: $dark
+
 .footer
   background: $info
   .content p strong
