--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,4 +1,4 @@
-<div class="tile is-4">
+<div class="column is-4">
   <div class="card">
     <div class="card-content">
       <p class="subtitle">
