--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -41,7 +41,7 @@
 
     <section class="section">
       <div class="container">
-        <div class="tile is-ancestor">
+        <div class="columns is-multiline">
           
           {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
           {% include apicard.html title="Titles Database" link="https://titles.ethiopicist.com" docs="https://github.com/ethiopicist/Titles#readme" content="A database of titles and incipits for common books and prayers." %}
