I don't feel like this is updating, though also it's lost in cascading

--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -57,7 +57,7 @@ section.section
     font-size: 2rem
     color: $dark
 
-.tag.is-primary
+.tag.is-primary.is-pulled-right
   color: $dark
 
 .footer
