A little update - hopefully easier for others to edit quickly

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="navbar-menu">
               <div class="navbar-end is-flex-touch">
-                <a class="navbar-item is-hidden-touch" href="https://github.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-github"></i></span></a>
+                <a class="navbar-item is-hidden-touch" href="https://github.com/ethiopicist/"><span class="icon"><i class="fa fa-github"></i></span></a>
                 <a class="navbar-item is-hidden-touch" href="https://www.facebook.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
                 <a class="navbar-item is-hidden-touch" href="https://twitter.com/ethiopicist" target="_blank"><span class="icon"><i class="fa fa-twitter"></i></span></a>
               </div>
@@ -43,8 +43,7 @@
       <div class="container">
         <div class="columns is-multiline">
           
-          {% include appcard.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
-          {% include apicard.html title="Titles Database" link="https://titles.ethiopicist.com" docs="https://github.com/ethiopicist/Titles#readme" content="A database of titles and incipits for common books and prayers." %}
+          {% include cards.html %}
 
         </div>
       </div>
