--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,2 +1,2 @@
 {% include app.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
-{% include api.html title="Titles Database" link="https://titles.ethiopicist.com" docs="https://github.com/ethiopicist/Titles#readme" content="A database of titles and incipits for common books and prayers." %}
+{% include api.html title="Asmāt" link="https://asmat.ethiopicist.com" docs="https://asmat.ethiopicist.com/docs/" content="An online database of Ethiopic magico-religious texts which also includes a database of manuscripts and a glossary of relevant terms." %}
