--- a/_layouts/unsubscribe.html
+++ b/_layouts/unsubscribe.html
@@ -46,49 +46,14 @@
                 </span>
               </p>
               <p class="control">
-                <input class="button is-info" type="submit" value="Subscribe">
+                <input class="button is-danger" type="submit" value="Unsubscribe">
               </p>
             </div>
             <div class="column"></div>
           </div>
         </form>
-        <p class="help has-text-centered"><a id="policy">Privacy policy</a>.</p>
       </div>
     </section>
-
-    <div class="modal">
-      <div class="modal-background"></div>
-      <div class="modal-content">
-        <div class="box">
-          <h1 class="title">Privacy Policy</h1>
-
-          <h2 class="subtitle">Collection of Information</h2>
-          <p class="content">
-            Ethiopicist.com will only request your email address and will never request or use any other personal information.
-          </p>
-          
-          <h2 class="subtitle">Use of Information</h2>
-          <p class="content">
-            By subscribing to this mailing list, you will receive emails sent from Ethiopicist.com and other members of the list.
-            Only members of the list are able to send and receive emails, though Ethiopicist.com cannot guarantee that members will not forward or otherwise share any emails with those who are not members.
-            The addresses of members are verified by a third party service to prevent spam.
-          </p>
-          
-          <h2 class="subtitle">Unsubscribe</h2>
-          <p class="content">
-            At any time you may unsubscribe by entering your email address on <a href="https://dev.ethiopicist.com/unsubscribe/">this page</a>.
-          </p>
-
-          <h2 class="subtitle">Security</h2>
-          <p class="content">
-            The security of your personal information is important, but no method of transmission over the Internet of electronic storage is 100% secure.
-          </p>
-
-          <p>To submit inquiries about this policy, please contact Ethiopicist.com</p>
-        </div>
-      </div>
-      <button class="modal-close is-large" aria-label="close"></button>
-    </div>
 
     <script>
       $("#subscribe").submit(function(e) {
@@ -97,7 +62,7 @@
 
         $.ajax({
               type: "GET",
-              url: 'https://wulzbtezrb.execute-api.us-east-1.amazonaws.com/latest/subscribe',
+              url: 'https://wulzbtezrb.execute-api.us-east-1.amazonaws.com/latest/unsubscribe',
               data: {"address": address},
               success: function(data){
                 alert(data.message);
