--- a/_layouts/subscribe.html
+++ b/_layouts/subscribe.html
@@ -34,6 +34,7 @@
 
     <section class="section">
       <div class="container">
+        <div id="notification" class="notification is-info" style="display: none;"></div>
         <div class="content has-text-centered">{{ content }}</div>
         <form id="subscribe">
           <div class="columns">
@@ -100,7 +101,7 @@
               url: 'https://wulzbtezrb.execute-api.us-east-1.amazonaws.com/latest/subscribe',
               data: {"address": address},
               success: function(data){
-                alert(data.message);
+                $('#notification').text(data.message).slideDown();
               }
             });
 
