Added more clear unsubscribe link

--- a/_layouts/subscribe.html
+++ b/_layouts/subscribe.html
@@ -53,7 +53,7 @@
             <div class="column"></div>
           </div>
         </form>
-        <p class="help has-text-centered"><a id="policy">Privacy policy</a>.</p>
+        <p class="help has-text-centered"><a id="policy">Privacy policy</a>. <a href="/unsubscribe/">Unsubscribe</a>.</p>
       </div>
     </section>
 
@@ -77,7 +77,7 @@
           
           <h2 class="subtitle">Unsubscribe</h2>
           <p class="content">
-            At any time you may unsubscribe by entering your email address on <a href="https://dev.ethiopicist.com/unsubscribe/">this page</a>.
+            At any time you may unsubscribe by entering your email address on <a href="/unsubscribe/">this page</a>.
           </p>
 
           <h2 class="subtitle">Security</h2>
