Extended characters seem unavailable with Typekit

--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -1,7 +1,7 @@
 @charset "utf-8"
 /*! bulma.io v0.7.1 | MIT License | github.com/jgthms/bulma */
 
-@import "https://use.typekit.net/fqf0utz.css"
+@import "https://fonts.googleapis.com/css?family=Fira+Sans:400,600&subset=latin-ext"
 @import "utilities/initial-variables"
 
 $primary: #F3CA40
