--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,2 +1,3 @@
 {% include app.html title="Ethiopic Calendar" link="https://cal.ethiopicist.com" repo="https://github.com/ethiopicist/Calendar" content="A responsive, pure Javascript/jQuery calendar app." %}
 {% include api.html title="Asmāt" link="https://asmat.ethiopicist.com" docs="https://asmat.ethiopicist.com/docs/" content="An online database of Ethiopic magico-religious texts which also includes a database of manuscripts and a glossary of relevant terms." %}
+{% include api.html title="Qəddus" link="https://qeddus.ethiopicist.com" docs="https://qeddus.ethiopicist.com/docs/" content="An online database of Ethiopian and Eritrean saints." %}
