--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -1,16 +1,16 @@
-@import "node_modules/bulma/sass/utilities/initial-variables"
+@import "utilities/initial-variables"
 
 $primary: #F3CA40
 $info: #577590
 
-@import "node_modules/bulma/sass/utilities/_all"
-@import "node_modules/bulma/sass/base/_all"
-@import "node_modules/bulma/sass/elements/_all"
-@import "node_modules/bulma/sass/form/_all"
-@import "node_modules/bulma/sass/components/_all"
-@import "node_modules/bulma/sass/grid/_all"
-@import "node_modules/bulma/sass/helpers/_all"
-@import "node_modules/bulma/sass/layout/_all"
+@import "utilities/_all"
+@import "base/_all"
+@import "elements/_all"
+@import "form/_all"
+@import "components/_all"
+@import "grid/_all"
+@import "helpers/_all"
+@import "layout/_all"
 
 .footer
   background: $info
