--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 <footer class="footer">
     <div class="content has-text-centered">
-      <p><strong>&copy;2020 Ethiopicist.com and its contributors.</strong></p>
+      <p>
+        <strong>&copy;2020 <a href="https://ethiopicist.com">Ethiopicist.com</a> and its contributors.</strong>
+      </p>
+      <p class="is-hidden-tablet">
+        <a href="https://github.com/ethiopicist/"><span class="icon"><i class="fa fa-github"></i></span></a>
+        <a href="https://www.facebook.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
+        <a href="https://twitter.com/ethiopicist" target="_blank"><span class="icon"><i class="fa fa-twitter"></i></span></a>
+      </p>
   </footer>
