--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,41 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ content }}">
+    <meta name="description" content="Resources for digitally-minded Ethiopicists.">
     <title>Ethiopicist // Developer</title>
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
-    <section class="hero is-primary is-fullheight">
-      <div class="hero-head">
-        <nav class="navbar">
-          <div class="container">
-            <div class="navbar-brand">
-              <a class="navbar-item" href="https://ethiopicist.com">
-                <img src="/assets/images/logo.png" alt="logo">
-              </a>
-            </div>
-            <div class="navbar-menu">
-              <div class="navbar-end is-flex-touch">
-                <a class="navbar-item is-hidden-touch" href="https://github.com/ethiopicist/"><span class="icon"><i class="fa fa-github"></i></span></a>
-                <a class="navbar-item is-hidden-touch" href="https://www.facebook.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
-                <a class="navbar-item is-hidden-touch" href="https://twitter.com/ethiopicist" target="_blank"><span class="icon"><i class="fa fa-twitter"></i></span></a>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title">
-            <img src="/assets/images/icon.png"> // Developer
-          </h1>
-          <h2 class="subtitle">
-            Resources for digitally-minded Ethiopicists.
-          </h2>
-        </div>
-      </div>
-    </section>
+    {% include header.html title="is-fullheight" %}
 
     <section class="section">
       <div class="container">
