Fix image sizes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="https://ethiopicist.com">
-            <img src="/assets/images/logo.png" alt="logo">
+            <img src="/assets/images/logo.png" alt="logo" style="max-height: 50px;">
           </a>
         </div>
         <div class="navbar-menu">
@@ -18,9 +18,9 @@
     </nav>
   </div>
   <div class="hero-body">
-    <div class="container">
+    <div class="container has-text-centered">
       <h1 class="title">
-        <img src="/assets/images/icon.png"> // Developer
+        <img src="/assets/images/icon.png"  style="max-height: 30px; margin-bottom: -5px;"> // Developer
       </h1>
       <h2 class="subtitle">
         Resources for digitally-minded Ethiopicists.
