Fix link colours and breakpoints

--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -14,5 +14,8 @@ $info: #577590
 
 .footer
   background: $info
-  .content p strong
+  .content p
     color: $white-ter
+    
+    a
+      color: inherit
