--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       <p>
         <strong>&copy;2020 <a href="https://ethiopicist.com">Ethiopicist.com</a> and its contributors.</strong>
       </p>
-      <p class="is-hidden-tablet">
+      <p class="is-hidden-desktop">
         <a href="https://github.com/ethiopicist/"><span class="icon"><i class="fa fa-github"></i></span></a>
         <a href="https://www.facebook.com/ethiopicist/" target="_blank"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
         <a href="https://twitter.com/ethiopicist" target="_blank"><span class="icon"><i class="fa fa-twitter"></i></span></a>
