--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title">
-        <img src="/assets/images/icon.png"  style="max-height: 30px; margin-bottom: -5px;"> // Developer
+        <a href="/"><img src="/assets/images/icon.png"  style="max-height: 30px; margin-bottom: -5px;"> // Developer</a>
       </h1>
       <h2 class="subtitle">
         Resources for digitally-minded Ethiopicists.
