--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,18 +14,18 @@
       <div class="container">
         <div class="columns is-multiline">
           
-          {% for post in site.posts %}
+          {% for post in site.apps %}
           <div class="column is-one-third">
             <div class="card">
               <div class="card-content">
                 <p class="subtitle">
-                  {{ post.title }}
+                  {{ app.title }}
                 </p>
-                <p>{{ post.excerpt }}</p>
+                <p>{{ app.description }}</p>
               </div>
               <footer class="card-footer">
                 <p class="card-footer-item">
-                  <span><a href="{{ post.url }}">Read More</a></span>
+                  <span><a href="{{ app.url }}">Read More</a></span>
                 </p>
               </footer>
             </div>
