--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="columns is-multiline">
           
-          {% for post in site.apps %}
+          {% for app in site.apps %}
           <div class="column is-one-third">
             <div class="card">
               <div class="card-content">
