--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,18 +14,21 @@
       <div class="container">
         <div class="columns is-multiline">
           
-          {% for app in site.apps %}
+          {% for project in site.ethiopiicst %}
           <div class="column is-one-third">
             <div class="card">
               <div class="card-content">
                 <p class="subtitle">
-                  {{ app.title }}
+                  {{ project.title }}
                 </p>
-                <p>{{ app.description }}</p>
+                <p>{{ content }}</p>
               </div>
               <footer class="card-footer">
                 <p class="card-footer-item">
-                  <span><a href="{{ app.url }}">Read More</a></span>
+                  <span><a href="{{ project.link1url }}">{{ project.link1}}</a></span>
+                </p>
+                <p class="card-footer-item">
+                  <span><a href="{{ project.link2url }}">{{ project.link2}}</a></span>
                 </p>
               </footer>
             </div>
