--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -12,6 +12,17 @@ $info: #577590
 @import "helpers/_all"
 @import "layout/_all"
 
+.section .lead
+  background: $white-ter
+
+  p
+    font-size: 1.5rem
+    font-weight: 300
+    text-align: center
+    
+    a
+      text-decoration: underline
+
 .footer
   background: $info
   .content p
