--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,7 +12,7 @@
 
     <section class="section">
       <div class="container">
-        <h1 class="title">Our Projects:</h1>
+        <h1 class="title">Projects from Ethiopicist.com:</h1>
 
         <div class="columns is-multiline">
           
