Minor format change

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,9 +20,7 @@
           <div class="column is-one-third">
             <div class="card">
               <div class="card-content">
-                <p class="subtitle">
-                  {{ project.title }}
-                </p>
+                <h2 class="subtitle is-4">{{ project.title }}</h2>
                 <p>{{ project.content }}</p>
               </div>
               <footer class="card-footer">
@@ -51,9 +49,7 @@
           <div class="column is-one-third">
             <div class="card">
               <div class="card-content">
-                <p class="subtitle">
-                  {{ project.title }}
-                </p>
+                <h2 class="subtitle is-4">{{ project.title }}</h2>
                 <p>{{ project.content }}</p>
               </div>
               <footer class="card-footer">
