make cards equal height

--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -12,6 +12,14 @@ $info: #577590
 @import "helpers/_all"
 @import "layout/_all"
 
+.card
+   display: flex
+   flex-direction: column
+   height: 100%
+
+  .card-footer
+    margin-top: auto
+
 .section.lead
   background: $white-ter
 
