Change header height

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<section class="hero is-primary {{ include.size }}">
+<section class="hero is-primary is-medium">
   <div class="hero-head">
     <nav class="navbar">
       <div class="container">
