--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
-    {% include header.html title="is-fullheight" %}
+    {% include header.html %}
 
     <section class="section">
       <div class="container">
