--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -21,7 +21,7 @@
             <div class="card">
               <div class="card-content">
                 <h2 class="subtitle is-4">{{ project.title }}</h2>
-                <p>{{ project.content }}</p>
+                {{ project.content }}
               </div>
               <footer class="card-footer">
                 <p class="card-footer-item">
@@ -50,7 +50,7 @@
             <div class="card">
               <div class="card-content">
                 <h2 class="subtitle is-4">{{ project.title }}</h2>
-                <p>{{ project.content }}</p>
+                {{ project.content }}
               </div>
               <footer class="card-footer">
                 <p class="card-footer-item">
