--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -70,7 +70,7 @@
 
     <section class="section lead">
       <div class="container">
-        <p>Have a project to add? <a href="https://github.com/ethiopicist/ethiopicist.github.io">Make a Pull Request</a> to add it!</p>
+        <p>Have a project to add? <a href="https://github.com/ethiopicist/ethiopicist.github.io#readme">Make a Pull Request</a> to add it!</p>
       </div>
     </section>
 
