--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,10 @@
   </div>
   <div class="hero-body">
     <div class="container has-text-centered">
-      <h1 class="title">
-        <img src="/assets/images/icon.png"  style="max-height: 30px; margin-bottom: -5px;"> // Developer
+      <h1 class="title is-1">
+        <img src="/assets/images/icon.png"  style="max-height: 35px;"> // Developer
       </h1>
-      <h2 class="subtitle">
+      <h2 class="subtitle is-3">
         Resources for digitally-minded Ethiopicists.
       </h2>
     </div>
